Working on k-means

--- a/src/xray.ipynb
+++ b/src/xray.ipynb
@@ -33,7 +33,8 @@
    "outputs": [],
    "source": [
     "# Params\n",
-    "imgfile = '/media/docker/workspace/xraybones/res/xray.jpg'"
+    "imgfile = '/media/docker/workspace/xraybones/res/xray.jpg'\n",
+    "imgfile = '/media/docker/workspace/xraybones/res/xray2.png'"
    ]
   },
   {
@@ -224,6 +225,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "rough-richards",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crop image\n",
+    "imgraw = cv.imread(imgfile)\n",
+    "\n",
+    "cropping = 0.08\n",
+    "imgraw = imgraw[ int(cropping*imgraw.shape[0]):int((1.-cropping)*imgraw.shape[0]), \n",
+    "          int(cropping*imgraw.shape[1]):int((1.-cropping)*imgraw.shape[1])]\n",
+    "imgraw = cv2.cvtColor(src=imgraw, code=cv2.COLOR_BGR2GRAY)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "turned-royalty",
    "metadata": {},
@@ -248,11 +265,10 @@
     "fig = plt.figure(figsize=(15, 15))\n",
     "\n",
     "# Loading exposure images into a list\n",
-    "img = cv.imread(imgfile)\n",
-    "img = cv2.cvtColor(src=img, code=cv2.COLOR_BGR2GRAY)\n",
+    "img = imgraw.copy()\n",
     "\n",
     "# Blur image\n",
-    "img_blur = cv2.GaussianBlur(img,(25,25),0)\n",
+    "img_blur = cv2.GaussianBlur(img,(15,15),0)\n",
     "\n",
     "# Threshold (binary image)\n",
     "low_thres = int(min(centers))\n",
@@ -262,7 +278,7 @@
     "plt.subplot(1,3,1); plt.xticks([]),plt.yticks([]); plt.imshow(img_eq, cmap='gray')\n",
     "\n",
     "# Morphological (remove outliers)\n",
-    "kernel = np.ones((35, 35), 'uint8')\n",
+    "kernel = np.ones((15, 15), 'uint8')\n",
     "img_morph = cv2.morphologyEx(img_eq, cv2.MORPH_CLOSE, kernel)\n",
     "#equalize = cv2.morphologyEx(equalize, cv2.MORPH_CLOSE, kernel)\n",
     "\n",
@@ -279,7 +295,7 @@
     "hull = cv2.convexHull(contours, returnPoints=False)\n",
     "defects = cv2.convexityDefects(contours, hull)\n",
     "\n",
-    "img2 = img.copy()\n",
+    "img2 = imgraw.copy()\n",
     "cv2.drawContours(img2, [contours], -1, (255, 255, 255), 2)\n",
     "\n",
     "plt.subplot(1,3,3); plt.xticks([]),plt.yticks([]); plt.imshow(img2, cmap='gray')\n",
@@ -310,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img2 = cv2.cvtColor(src=img, code=cv2.COLOR_GRAY2RGB)\n",
+    "img2 = imgraw.copy()\n",
     "\n",
     "if defects is not None:\n",
     "    defcnt = 0\n",
@@ -328,13 +344,19 @@
     "    angle = np.arccos((b ** 2 + c ** 2 - a ** 2) / (2 * b * c))  #      cosine theorem\n",
     "    if angle <= np.pi / 2:  # angle less than 90 degree, treat as fingers\n",
     "        defcnt += 1\n",
-    "        #cv.circle(img2, far, 10, [255, 0, 0], -1)\n",
+    "        cv.circle(img2, far, 10, [255, 0, 0], -1)\n",
     "        fingergaps = np.append(fingergaps, [far[0], -far[1]])\n",
     "        \n",
     "fingergaps = fingergaps.flatten().reshape(-1,2)\n",
     "\n",
     "if defcnt > 0:\n",
-    "    defcnt = defcnt+1"
+    "    defcnt = defcnt+1\n",
+    "    \n",
+    "# Visualize\n",
+    "fig = plt.figure(figsize=(15, 15))\n",
+    "\n",
+    "cv.putText(img2, '%d Fingers detected' % defcnt, (0, 50), cv.FONT_HERSHEY_SIMPLEX, 1, (255, 0, 0) , 2, cv.LINE_AA)\n",
+    "cv2.drawContours(img2, [contours], -1, (255, 255, 255), 2)"
    ]
   },
   {
@@ -345,7 +367,7 @@
    "outputs": [],
    "source": [
     "# Visualize convex hull and defects\n",
-    "img2 = cv2.cvtColor(src=img, code=cv2.COLOR_GRAY2RGB)\n",
+    "img2 = imgraw.copy()\n",
     "\n",
     "cnt = contours\n",
     "\n",
@@ -374,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "parliamentary-egyptian",
+   "id": "black-progress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +407,7 @@
     "cv2.drawContours(img2, [contours], -1, (255, 255, 255), 2)\n",
     "\n",
     "fig = plt.figure(figsize=(15, 15))\n",
-    "plt.imshow(img2)\n",
+    "plt.imshow(img2, cmap='gray')\n",
     "\n",
     "for fingergap in fingergaps:\n",
     "    plt.scatter(fingergap[0], -fingergap[1], c='r', marker='.', s=200)\n",
@@ -397,17 +419,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "structured-creature",
+   "id": "simplified-pickup",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "major-mobility",
+   "cell_type": "raw",
+   "id": "moral-tract",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# I do not know what I'm doing here\n",
     "epsilon = 0.04*cv.arcLength(cnt,True)\n",
@@ -425,7 +445,8 @@
    "id": "spectacular-spain",
    "metadata": {},
    "source": [
-    "## Apply HDR"
+    "## Apply HDR\n",
+    "https://docs.opencv.org/3.4/d2/df0/tutorial_py_hdr.html"
    ]
   },
   {
@@ -436,32 +457,32 @@
    "outputs": [],
    "source": [
     "# Apply HDR\n",
-    "# https://docs.opencv.org/3.4/d2/df0/tutorial_py_hdr.html\n",
+    "# \n",
     "import cv2 as cv\n",
     "import numpy as np\n",
     "\n",
     "# Loading exposure images into a list\n",
-    "img = cv.imread('/media/docker/artifacts/imgs/xray.jpg')\n",
-    "img = cv2.cvtColor(src=img, code=cv2.COLOR_BGR2GRAY)\n",
+    "img = cv2.imread(imgfile)\n",
+    "value=-50\n",
+    "img2 = np.where((255 - img) < value, 255, img+value)\n",
+    "value=100\n",
+    "img3 = np.where((255 - img) < value, 255, img+value)\n",
     "\n",
-    "# Extract hand\n",
-    "value = 240\n",
-    "mask = img > value\n",
-    "img_new = np.where((255 - img) < value, 255, img+value)\n",
+    "img_list = [img, img2, img3]\n",
+    "exposure_times = np.array([10., 15., 20.], dtype=np.float32)\n",
     "\n",
-    "kernel = np.ones((10, 10), 'uint8')\n",
-    "#dilate_img = cv2.dilate(img_new, kernel, iterations=3)\n",
-    "#erosion_img = cv2.erode(dilate_img, kernel, iterations=3)\n",
-    "opening = cv2.morphologyEx(img_new, cv2.MORPH_OPEN, kernel)\n",
-    "closing = cv2.morphologyEx(img_new, cv2.MORPH_CLOSE, kernel)\n",
-    "gradient = cv2.morphologyEx(closing, cv2.MORPH_GRADIENT, kernel)\n",
-    "\n",
-    "#fig = plt.figure(figsize=(15, 15))\n",
-    "#plt.imshow(gradient, cmap='gray')\n",
-    "#img_list = [cv.imread(fn) for fn in img_fn]\n",
-    "#exposure_time = np.array(15.0, dtype=np.float32)\n",
-    "#merge_debevec = cv.createMergeDebevec()"
+    "# Merge exposures to HDR image\n",
+    "merge_debevec = cv2.createMergeDebevec()\n",
+    "hdr_debevec = merge_debevec.process(img_list, times=exposure_times.copy())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "crucial-limitation",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -489,6 +510,97 @@
     "https://realpython.com/k-means-clustering-python/\n",
     "https://scikit-learn.org/stable/modules/clustering.html#clustering\n",
     "https://scikit-learn.org/stable/auto_examples/cluster/plot_dbscan.html#sphx-glr-auto-examples-cluster-plot-dbscan-py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fabulous-willow",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# k-Means histogram clusterin\n",
+    "img = imgraw.copy()\n",
+    "\n",
+    "# Get image height and width\n",
+    "rows, cols = img.shape[:]\n",
+    "\n",
+    "# Image two-dimensional pixel conversion to one-dimensional\n",
+    "data = img.reshape((rows * cols))\n",
+    "data = np.float32(data)\n",
+    "\n",
+    "# Definition Center (type,max_iter,epsilon)\n",
+    "criteria = (cv2.TERM_CRITERIA_EPS +\n",
+    "            cv2.TERM_CRITERIA_MAX_ITER, 10, 1.0)\n",
+    "flags = cv2.KMEANS_RANDOM_CENTERS\n",
+    "\n",
+    "# K-Means clustering into 4 categories\n",
+    "compactness, labels, centers = cv2.kmeans(data, 2, None, criteria, 10, flags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "quality-horse",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(centers)\n",
+    "hist,bins = np.histogram(img.ravel(),256,[0,256])\n",
+    "\n",
+    "#plt.hist(image.ravel(),256,[0,256]); \n",
+    "plt.plot(bins[1:],hist,[0,256])\n",
+    "plt.scatter(centers, np.zeros(len(centers)), c='r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "transparent-baltimore",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "swiss-recovery",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "image = imgraw.copy()\n",
+    "\n",
+    "ret,image = ret,image = cv2.threshold(image, int(centers[1]), 255, cv2.THRESH_BINARY)\n",
+    "\n",
+    "#equalize= cv2.equalizeHist(thresh_image)\n",
+    "\n",
+    "#canny_image = cv2.Canny(equalize,250,255)\n",
+    "#canny_image = cv2.convertScaleAbs(canny_image)\n",
+    "#kernel = np.ones((3,3), np.uint8)\n",
+    "#dilated_image = cv2.dilate(canny_image,kernel,iterations=1)\n",
+    "\n",
+    "#contours, hierarchy = cv2.findContours(dilated_image, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "#contours= sorted(contours, key = cv2.contourArea, reverse = True)[:10]\n",
+    "#c=contours[0]\n",
+    "\n",
+    "#final = cv2.drawContours(img, [c], -1, (255,0, 0), 3)\n",
+    "#mask = np.zeros(image.shape,np.uint8)\n",
+    "\n",
+    "#new_image = cv2.drawContours(mask,[c],0,255,-1,)\n",
+    "#new_image = cv2.bitwise_and(image, image, mask=equalize)\n",
+    "\n",
+    "#cv2.namedWindow(\"new\",cv2.WINDOW_NORMAL)\n",
+    "#cv2.imshow(\"new\",new_image)\n",
+    "#cv2.waitKey(0)\n",
+    "\n",
+    "# Visualize data\n",
+    "\n",
+    "fig = plt.figure(figsize=(figsize,figsize))\n",
+    "plt.imshow(image, cmap='gray')"
    ]
   },
   {
@@ -536,88 +648,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "serial-watershed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kernel = np.array([[-1, -1, -1], [-1, 8, -1], [-1, -1, -1]])\n",
-    "\n",
-    "#image = cv2.cvtColor(src=image, code=cv2.COLOR_BGR2GRAY) \n",
-    "# Edge Detection Kernel\n",
-    "#kernel = np.array([[-1, -1, -1], [-1, 8, -1], [-1, -1, -1]])\n",
-    "\n",
-    "# Convolve and Save Output\n",
-    "#output = convolve2D(image, kernel, padding=2)\n",
-    "#cv2.imwrite('2DConvolved.jpg', output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "prostate-athens",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# OpenCV Filters\n",
-    "# https://docs.opencv.org/master/d4/d86/group__imgproc__filter.html\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "swiss-recovery",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "figsize=15\n",
-    "image = cv2.imread('/media/docker/artifacts/imgs/xray.jpg')\n",
-    "image = cv2.cvtColor(src=image, code=cv2.COLOR_BGR2GRAY)\n",
-    "\n",
-    "img = image\n",
-    "equalize = image\n",
-    "\n",
-    "ret,thresh_image = cv2.threshold(equalize,0,255,cv2.THRESH_OTSU+cv2.THRESH_BINARY)\n",
-    "equalize= cv2.equalizeHist(thresh_image)\n",
-    "\n",
-    "canny_image = cv2.Canny(equalize,250,255)\n",
-    "canny_image = cv2.convertScaleAbs(canny_image)\n",
-    "kernel = np.ones((3,3), np.uint8)\n",
-    "dilated_image = cv2.dilate(canny_image,kernel,iterations=1)\n",
-    "\n",
-    "contours, hierarchy = cv2.findContours(dilated_image, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "contours= sorted(contours, key = cv2.contourArea, reverse = True)[:10]\n",
-    "c=contours[0]\n",
-    "\n",
-    "#final = cv2.drawContours(img, [c], -1, (255,0, 0), 3)\n",
-    "mask = np.zeros(image.shape,np.uint8)\n",
-    "\n",
-    "new_image = cv2.drawContours(mask,[c],0,255,-1,)\n",
-    "#new_image = cv2.bitwise_and(image, image, mask=equalize)\n",
-    "\n",
-    "#cv2.namedWindow(\"new\",cv2.WINDOW_NORMAL)\n",
-    "#cv2.imshow(\"new\",new_image)\n",
-    "#cv2.waitKey(0)\n",
-    "\n",
-    "# Visualize data\n",
-    "\n",
-    "fig = plt.figure(figsize=(figsize,figsize))\n",
-    "plt.imshow(equalize, cmap='gray')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "statewide-savannah",
    "metadata": {},
    "outputs": [],
    "source": [
     "# k-means color clustering\n",
     "#Read the original image grayscale color\n",
-    "img = cv2.imread('/media/docker/artifacts/imgs/xray.jpg', 0) \n",
+    "img = imgraw.copy()\n",
     "\n",
     "#Get image height and width\n",
     "rows, cols = img.shape[:]\n",
@@ -649,59 +686,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "absent-remainder",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "centers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "computational-pharmacology",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get image coordinates as points with threshold\n",
     "plt.figure(figsize=(figsize, figsize))\n",
-    "image = cv2.imread('/media/docker/artifacts/imgs/xray.jpg', 0) \n",
+    "image = imgraw.copy()\n",
     "indices = np.where(image > 180)\n",
     "plt.axis('equal')\n",
     "plt.scatter(indices[1], -indices[0], marker='.', c='k', s=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "talented-devon",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(indices)\n",
-    "data = np.array([indices[1].reshape(-1,1), indices[0].reshape(-1,1)])\n",
-    "print(data.reshape(-1,2))\n",
-    "#plt.scatter(data[:,0], data[:,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "official-watershed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# k-means clustering\n",
-    "# https://scikit-learn.org/stable/modules/clustering.html#clustering\n",
-    "# Spectral, DBSCAN, OPTICS\n",
-    "kmeans = KMeans(\n",
-    "    init=\"random\",\n",
-    "    n_clusters=3,\n",
-    "    n_init=10,\n",
-    "    max_iter=300,\n",
-    "    random_state=42\n",
-    ")\n",
-    "kmeans.fit(indices)"
    ]
   },
   {
@@ -731,29 +725,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sharp-straight",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Edge detection\n",
-    "edges = cv2.Canny(image,150,200)\n",
-    "plt.figure(figsize=(figsize, figsize))\n",
-    "plt.imshow(edges,cmap = 'gray')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "southern-novelty",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "hist,bins = np.histogram(image.ravel(),256,[0,256])\n",
-    "\n",
-    "#plt.hist(image.ravel(),256,[0,256]); \n",
-    "plt.plot(bins[1:],hist,[0,256])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
